--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body {
 h2 {
     font-size: 5rem;
     font-weight: bold;
+    padding: 3rem;
 }
 
 .coming-soon {
@@ -29,4 +30,8 @@ h2 {
 
 .day,.hour,.minute,.second {
     font-size: 3rem;
+}
+
+.waiting {
+    height: 60vh;
 }
