Updated the project nd final touch

--- a/Keyboard_event_project/style.css
+++ b/Keyboard_event_project/style.css
@@ -5,7 +5,8 @@
 }
 
 body {
-  background-color: #e1e1e1;
+  background-image: url(./cool-background.png);
+  background-size: cover;
   font-family: 'Muli', sans-serif;
   display: flex;
   align-items: center;
@@ -15,6 +16,14 @@ body {
   overflow: hidden;
   margin: 0;
 }
+
+h2 {
+  font-size: 3rem;
+  color: rgb(244, 199, 244);
+  background-color: blueviolet;
+  padding: 12px;
+}
+
 
 .key {
   border: 1px solid #999;
